--- a/src/app/admin/components/employee/edit-employee-dialog/edit-employee-dialog.component.html
+++ b/src/app/admin/components/employee/edit-employee-dialog/edit-employee-dialog.component.html
@@ -5,8 +5,8 @@
 
     <div class="container">
         <mat-form-field appearance="fill">
-          <mat-label> الرقم القومي</mat-label>
-          <input matInput placeholder="الرقم القومي"  formControlName="employee_ID"  readonly="true" >
+          <mat-label> اسم المستخدم</mat-label>
+          <input matInput placeholder="اسم المستخدم بالانجليزي"  formControlName="employee_ID"  readonly="true" >
         </mat-form-field>
 
         <mat-form-field appearance="fill">
