--- a/src/app/admin/components/vehicles/view-vehicles/view-vehicles.component.html
+++ b/src/app/admin/components/vehicles/view-vehicles/view-vehicles.component.html
@@ -1,159 +1,155 @@
 <div class="background">
     <div class="space"></div>
-     <div class="container-fluid">
-        <div class="add " fxLayoutAlign="flex-start">
-            <button mat-raised-button color="primary"  (click)="openDialog()" >اضافة  مركبة جديدة </button>
+    <div class="container-fluid">
+        <div class="add" fxLayoutAlign="flex-start">
+            <button mat-raised-button color="primary" (click)="openDialog()">اضافة  مركبة جديدة</button>
         </div>
         <mat-divider></mat-divider>
          
-        <mat-form-field  fxLayoutAlign="flex-end">
+        <mat-form-field fxLayoutAlign="flex-end">
             <mat-label>بحث</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="مثال:" #input>
-          </mat-form-field>
+        </mat-form-field>
         
         <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" >
+            <table mat-table [dataSource]="dataSource">
 
                 <!-- Actions -->
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef> عمليات</th>
-                    <td mat-cell *matCellDef="let element" > 
-                        <button mat-mini-fab color="light" class="icon"  (click)="openConfirmDialog(element.vehicle_PlateNumber)" >
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-mini-fab color="light" class="icon" (click)="openConfirmDialog(element.vehicle_PlateNumber)">
                             <mat-icon color="warn">delete</mat-icon>
-                         </button>
+                        </button>
 
-                         <button mat-mini-fab color="light" class="icon" (click)="editDialog(element)"  >
-                            <mat-icon color="primary" >edit</mat-icon>
-                         </button>
+                        <button mat-mini-fab color="light" class="icon" (click)="editDialog(element)">
+                            <mat-icon color="primary">edit</mat-icon>
+                        </button>
                          
-                         <button mat-mini-fab color="light" class="icon" (click)=" assignDialog()"  >
-                            <mat-icon color="primary" >add</mat-icon>
-                         </button>
-                         <button mat-mini-fab color="light" class="icon"  >
-                          <mat-icon color="primary">print</mat-icon>
-                       </button>
-                        
+                        <button mat-mini-fab color="light" class="icon" (click)="assignDialog()">
+                            <mat-icon color="primary">add</mat-icon>
+                        </button>
+                        <button mat-mini-fab color="light" class="icon" (click)="printVehicle(element)">
+                            <mat-icon color="primary">print</mat-icon>
+                        </button>
                     </td>
                 </ng-container>
 
-                 <!-- regestrationtype Column -->
-                 <ng-container matColumnDef="vehicle_PlateNumber">
-                    <th mat-header-cell *matHeaderCellDef>  رقم اللوحة </th>
+                <!-- Vehicle Columns -->
+                <ng-container matColumnDef="vehicle_PlateNumber">
+                    <th mat-header-cell *matHeaderCellDef> رقم اللوحة </th>
                     <td mat-cell *matCellDef="let element"> {{element.vehicle_PlateNumber}} </td>
-                  </ng-container>
+                </ng-container>
 
-                   <!-- Edate Column -->
-                   <ng-container matColumnDef="license_SerialNumber">
-                    <th mat-header-cell *matHeaderCellDef>  الرقم التسلسلي </th>
+                <ng-container matColumnDef="license_SerialNumber">
+                    <th mat-header-cell *matHeaderCellDef> الرقم التسلسلي </th>
                     <td mat-cell *matCellDef="let element"> {{element.license_SerialNumber}} </td>
-                  </ng-container>
+                </ng-container>
 
-                    <!-- color Column -->
-                    <ng-container matColumnDef="license_Registeration">
-                        <th mat-header-cell *matHeaderCellDef> نوع تسجيل اللوحة</th>
-                        <td mat-cell *matCellDef="let element"> {{element.license_Registeration}} </td>
-                      </ng-container>
+                <ng-container matColumnDef="license_Registeration">
+                    <th mat-header-cell *matHeaderCellDef> نوع تسجيل اللوحة</th>
+                    <td mat-cell *matCellDef="let element"> {{element.license_Registeration}} </td>
+                </ng-container>
 
-                      <!--chassisno Column -->
-                  <ng-container matColumnDef="license_ExpirationDate">
-                    <th mat-header-cell *matHeaderCellDef>  تاريخ انتهاء رخصة السير </th>
+                <ng-container matColumnDef="license_ExpirationDate">
+                    <th mat-header-cell *matHeaderCellDef> تاريخ انتهاء رخصة السير </th>
                     <td mat-cell *matCellDef="let element"> {{element.license_ExpirationDate}} </td>
-                  </ng-container>
+                </ng-container>
 
-
-                   <!-- manifuctureyear Column -->
-                   <ng-container matColumnDef="vehicle_ChassisNum">
-                    <th mat-header-cell *matHeaderCellDef>  رقم الهيكل </th>
+                <ng-container matColumnDef="vehicle_ChassisNum">
+                    <th mat-header-cell *matHeaderCellDef> رقم الهيكل </th>
                     <td mat-cell *matCellDef="let element"> {{element.vehicle_ChassisNum}} </td>
-                  </ng-container>
+                </ng-container>
 
-                  
-                   <!-- brand Column -->
-                   <ng-container matColumnDef="vehicle_ManufactureYear">
+                <ng-container matColumnDef="vehicle_ManufactureYear">
                     <th mat-header-cell *matHeaderCellDef> سنة الصنع </th>
                     <td mat-cell *matCellDef="let element"> {{element.vehicle_ManufactureYear}} </td>
-                  </ng-container>
+                </ng-container>
 
-                   <!-- type Column -->
-                   <ng-container matColumnDef="vehicle_BrandName">
+                <ng-container matColumnDef="vehicle_BrandName">
                     <th mat-header-cell *matHeaderCellDef>الماركة </th>
                     <td mat-cell *matCellDef="let element"> {{element.vehicle_BrandName}} </td>
-                  </ng-container>
+                </ng-container>
 
-                  
-                        <!-- plateno Column -->
                 <ng-container matColumnDef="vehicle_Color">
-                    <th mat-header-cell *matHeaderCellDef>  اللون </th>
+                    <th mat-header-cell *matHeaderCellDef> اللون </th>
                     <td mat-cell *matCellDef="let element"> {{element.vehicle_Color}} </td>
-                  </ng-container>
+                </ng-container>
 
-
-                  <!-- plateno Column -->
                 <ng-container matColumnDef="vehicle_Type">
-                  <th mat-header-cell *matHeaderCellDef>  الطراز </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_Type}} </td>
+                    <th mat-header-cell *matHeaderCellDef> الطراز </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_Type}} </td>
                 </ng-container>
 
-                <!-- plateno Column -->
                 <ng-container matColumnDef="vehicle_Insurance">
-                  <th mat-header-cell *matHeaderCellDef>  حالة التأمين </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_Insurance}} </td>
+                    <th mat-header-cell *matHeaderCellDef> حالة التأمين </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_Insurance}} </td>
                 </ng-container>
 
-                <!-- plateno Column -->
                 <ng-container matColumnDef="branch_ID">
-                  <th mat-header-cell *matHeaderCellDef>  رقم الفرع </th>
-                  <td mat-cell *matCellDef="let element"> {{element.branch_ID}} </td>
+                    <th mat-header-cell *matHeaderCellDef> رقم الفرع </th>
+                    <td mat-cell *matCellDef="let element"> {{element.branch_ID}} </td>
                 </ng-container>
 
-                 <!-- vehicle_Price -->
-                 <ng-container matColumnDef="vehicle_Price">
-                  <th mat-header-cell *matHeaderCellDef>  سعر المركبة  </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_Price}} </td>
+                <ng-container matColumnDef="vehicle_Price">
+                    <th mat-header-cell *matHeaderCellDef> سعر المركبة </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_Price}} </td>
                 </ng-container>
 
-                <!-- vehicle_Mileage -->
                 <ng-container matColumnDef="vehicle_Mileage">
-                  <th mat-header-cell *matHeaderCellDef>  قراءة العداد   </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_Mileage}} </td>
+                    <th mat-header-cell *matHeaderCellDef> قراءة العداد </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_Mileage}} </td>
                 </ng-container>
 
-                 <!-- vehicle_LastRepair_Date -->
-                 <ng-container matColumnDef="vehicle_LastRepair_Date">
-                  <th mat-header-cell *matHeaderCellDef>   تاريخ اخر صيانة   </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_LastRepair_Date}} </td>
+                <ng-container matColumnDef="vehicle_LastRepair_Date">
+                    <th mat-header-cell *matHeaderCellDef> تاريخ اخر صيانة </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_LastRepair_Date}} </td>
                 </ng-container>
 
-                <!-- vehicle_LastRepair_Price -->
                 <ng-container matColumnDef="vehicle_LastRepair_Price">
-                  <th mat-header-cell *matHeaderCellDef>    قيمة الصيانة    </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_LastRepair_Price}} </td>
+                    <th mat-header-cell *matHeaderCellDef> قيمة الصيانة </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_LastRepair_Price}} </td>
                 </ng-container>
 
-                 <!-- vehicle_LastAccident_Date -->
-                 <ng-container matColumnDef="vehicle_LastAccident_Date">
-                  <th mat-header-cell *matHeaderCellDef>     تاريخ اخر حادث    </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_LastAccident_Date}} </td>
+                <ng-container matColumnDef="vehicle_LastAccident_Date">
+                    <th mat-header-cell *matHeaderCellDef> تاريخ اخر حادث </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_LastAccident_Date}} </td>
                 </ng-container>
 
-                 <!-- vehicle_Owner -->
-                 <ng-container matColumnDef="vehicle_Owner">
-                  <th mat-header-cell *matHeaderCellDef>       مالك المركبة    </th>
-                  <td mat-cell *matCellDef="let element"> {{element.vehicle_Owner}} </td>
+                <ng-container matColumnDef="vehicle_Owner">
+                    <th mat-header-cell *matHeaderCellDef> مالك المركبة </th>
+                    <td mat-cell *matCellDef="let element"> {{element.vehicle_Owner}} </td>
                 </ng-container>
 
-                
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
 
-
- 
-
-                  
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-             </table>
-
-             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
         </div>
-     </div>
+    </div>
+</div>
+
+<!-- Hidden printable section -->
+<div id="print-section" style="display: none;">
+    <div id="vehicle-details">
+        <h2>تفاصيل المركبة</h2>
+        <p><strong>رقم اللوحة:</strong> {{printData?.vehicle_PlateNumber}}</p>
+        <p><strong>الرقم التسلسلي:</strong> {{printData?.license_SerialNumber}}</p>
+        <p><strong>نوع تسجيل اللوحة:</strong> {{printData?.license_Registeration}}</p>
+        <p><strong>تاريخ انتهاء رخصة السير:</strong> {{printData?.license_ExpirationDate}}</p>
+        <p><strong>رقم الهيكل:</strong> {{printData?.vehicle_ChassisNum}}</p>
+        <p><strong>سنة الصنع:</strong> {{printData?.vehicle_ManufactureYear}}</p>
+        <p><strong>الماركة:</strong> {{printData?.vehicle_BrandName}}</p>
+        <p><strong>اللون:</strong> {{printData?.vehicle_Color}}</p>
+        <p><strong>الطراز:</strong> {{printData?.vehicle_Type}}</p>
+        <p><strong>حالة التأمين:</strong> {{printData?.vehicle_Insurance}}</p>
+        <p><strong>رقم الفرع:</strong> {{printData?.branch_ID}}</p>
+        <p><strong>سعر المركبة:</strong> {{printData?.vehicle_Price}}</p>
+        <p><strong>قراءة العداد:</strong> {{printData?.vehicle_Mileage}}</p>
+        <p><strong>تاريخ اخر صيانة:</strong> {{printData?.vehicle_LastRepair_Date}}</p>
+        <p><strong>قيمة الصيانة:</strong> {{printData?.vehicle_LastRepair_Price}}</p>
+        <p><strong>تاريخ اخر حادث:</strong> {{printData?.vehicle_LastAccident_Date}}</p>
+        <p><strong>مالك المركبة:</strong> {{printData?.vehicle_Owner}}</p>
+    </div>
 </div>
