--- a/src/app/admin/components/employee/view-employees/view-employees.component.html
+++ b/src/app/admin/components/employee/view-employees/view-employees.component.html
@@ -1,117 +1,122 @@
 <div class="background">
     <div class="space"></div>
-     <div class="container-fluid">
-        <div class="add " fxLayoutAlign="flex-start">
-            <button mat-raised-button color="primary"  (click)="openDialog()" >اضافة موظف جديد</button>
+    <div class="container-fluid">
+        <div class="add" fxLayoutAlign="flex-start">
+            <button mat-raised-button color="primary" (click)="openDialog()">اضافة موظف جديد</button>
         </div>
         <mat-divider></mat-divider>
          
-        <mat-form-field  fxLayoutAlign="flex-end">
+        <mat-form-field fxLayoutAlign="flex-end">
             <mat-label>بحث</mat-label>
-            <input matInput (keyup)="applyFilter($event)"  #input>
-          </mat-form-field>
+            <input matInput (keyup)="applyFilter($event)" #input>
+        </mat-form-field>
         
         <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" >
+            <table mat-table [dataSource]="dataSource">
 
                 <!-- Actions -->
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef> عمليات</th>
-                    <td mat-cell *matCellDef="let element" > 
-                        <button mat-mini-fab color="light" class="icon" (click)="openConfirmDialog(element.employee_ID)" >
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-mini-fab color="light" class="icon" (click)="openConfirmDialog(element.employee_ID)">
                             <mat-icon color="warn">delete</mat-icon>
-                         </button>
+                        </button>
 
-                         <button mat-mini-fab color="light" class="icon" (click)="editDialog(element)"  >
-                            <mat-icon color="primary" >edit</mat-icon>
-                         </button>
+                        <button mat-mini-fab color="light" class="icon" (click)="editDialog(element)">
+                            <mat-icon color="primary">edit</mat-icon>
+                        </button>
                        
-                         <button mat-mini-fab color="light" class="icon"  >
-                          <mat-icon color="primary">print</mat-icon>
-                       </button>
-                        
+                        <button mat-mini-fab color="light" class="icon" (click)="printEmployee(element)">
+                            <mat-icon color="primary">print</mat-icon>
+                        </button>
                     </td>
                 </ng-container>
 
-                 <!-- employee_ID Column -->
-                 <ng-container matColumnDef="employee_ID">
-                    <th mat-header-cell *matHeaderCellDef> الرقم القومي </th>
+                <!-- employee_ID Column -->
+                <ng-container matColumnDef="employee_ID">
+                    <th mat-header-cell *matHeaderCellDef> اسم المستخدم </th>
                     <td mat-cell *matCellDef="let element"> {{element.employee_ID}} </td>
-                  </ng-container>
+                </ng-container>
 
-                   <!-- employee_Name Column -->
-                   <ng-container matColumnDef="employee_Name">
-                    <th mat-header-cell *matHeaderCellDef>  الاسم </th>
+                <!-- employee_Name Column -->
+                <ng-container matColumnDef="employee_Name">
+                    <th mat-header-cell *matHeaderCellDef> الاسم </th>
                     <td mat-cell *matCellDef="let element"> {{element.employee_Name}} </td>
-                  </ng-container>
+                </ng-container>
 
-                    <!-- employee_Birthday Column -->
-                    <ng-container matColumnDef="employee_Birthday">
-                        <th mat-header-cell *matHeaderCellDef> تاريخ الميلاد</th>
-                        <td mat-cell *matCellDef="let element"> {{element.employee_Birthday}} </td>
-                      </ng-container>
+                <!-- employee_Birthday Column -->
+                <ng-container matColumnDef="employee_Birthday">
+                    <th mat-header-cell *matHeaderCellDef> تاريخ الميلاد</th>
+                    <td mat-cell *matCellDef="let element"> {{element.employee_Birthday}} </td>
+                </ng-container>
 
-                      <!--chassisno Column -->
-                  <ng-container matColumnDef="employee_Role">
-                    <th mat-header-cell *matHeaderCellDef>  الوظيفة </th>
+                <!-- employee_Role Column -->
+                <ng-container matColumnDef="employee_Role">
+                    <th mat-header-cell *matHeaderCellDef> الوظيفة </th>
                     <td mat-cell *matCellDef="let element"> {{element.employee_Role}} </td>
-                  </ng-container>
+                </ng-container>
 
-
-                   <!-- manifuctureyear Column -->
-                   <ng-container matColumnDef="employee_Nationality">
-                    <th mat-header-cell *matHeaderCellDef>  الجنسية </th>
+                <!-- employee_Nationality Column -->
+                <ng-container matColumnDef="employee_Nationality">
+                    <th mat-header-cell *matHeaderCellDef> الجنسية </th>
                     <td mat-cell *matCellDef="let element"> {{element.employee_Nationality}} </td>
-                  </ng-container>
+                </ng-container>
 
-                  
-                   <!-- employee_Street_Name Column -->
-                   <ng-container matColumnDef="employee_Street_Name">
+                <!-- employee_Street_Name Column -->
+                <ng-container matColumnDef="employee_Street_Name">
                     <th mat-header-cell *matHeaderCellDef> اسم الشارع </th>
                     <td mat-cell *matCellDef="let element"> {{element.employee_Street_Name}} </td>
-                  </ng-container>
+                </ng-container>
 
-                   <!-- employee_BuildingNumber Column -->
-                   <ng-container matColumnDef="employee_BuildingNumber">
-                    <th mat-header-cell *matHeaderCellDef>رقم المبنى </th>
+                <!-- employee_BuildingNumber Column -->
+                <ng-container matColumnDef="employee_BuildingNumber">
+                    <th mat-header-cell *matHeaderCellDef> رقم المبنى </th>
                     <td mat-cell *matCellDef="let element"> {{element.employee_BuildingNumber}} </td>
-                  </ng-container>
+                </ng-container>
 
-                  
-                        <!-- employee_City Column -->
+                <!-- employee_City Column -->
                 <ng-container matColumnDef="employee_City">
-                    <th mat-header-cell *matHeaderCellDef> المدينة  </th>
+                    <th mat-header-cell *matHeaderCellDef> المدينة </th>
                     <td mat-cell *matCellDef="let element"> {{element.employee_City}} </td>
-                  </ng-container>
+                </ng-container>
 
-
-                   <!-- branch_ID Column -->
+                <!-- branch_ID Column -->
                 <ng-container matColumnDef="branch_ID">
-                  <th mat-header-cell *matHeaderCellDef> رقم الفرع  </th>
-                  <td mat-cell *matCellDef="let element"> {{element.branch_ID}} </td>
+                    <th mat-header-cell *matHeaderCellDef> رقم الفرع </th>
+                    <td mat-cell *matCellDef="let element"> {{element.branch_ID}} </td>
                 </ng-container>
 
-
-                 <!-- employeePhones Column -->
-                 <ng-container matColumnDef="employeePhones">
-                  <th mat-header-cell *matHeaderCellDef> ارقام التليفون  </th>
-                  <td mat-cell *matCellDef="let element"> {{element.employeePhones}} </td>
+                <!-- employeePhones Column -->
+                <ng-container matColumnDef="employeePhones">
+                    <th mat-header-cell *matHeaderCellDef> ارقام التليفون </th>
+                    <td mat-cell *matCellDef="let element"> {{element.employeePhones}} </td>
                 </ng-container>
 
-               
-                  
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
 
-                  
+            <div class="space"></div>
 
-                  
-             </table>
+            <!-- Add paginator component -->
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+        </div>
+    </div>
+</div>
 
-             <div class="space"></div>
-
-              <!-- Add paginator component -->
-              <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-            </div>
-     </div>
+<!-- Hidden printable section -->
+<div id="print-section" style="display: none;">
+    <div id="employee-details">
+        <h2>تفاصيل الموظف</h2>
+        <p><strong>اسم المستخدم:</strong> {{printData?.employee_ID}}</p>
+        <p><strong>الاسم:</strong> {{printData?.employee_Name}}</p>
+        <p><strong>تاريخ الميلاد:</strong> {{printData?.employee_Birthday}}</p>
+        <p><strong>الوظيفة:</strong> {{printData?.employee_Role}}</p>
+        <p><strong>الجنسية:</strong> {{printData?.employee_Nationality}}</p>
+        <p><strong>اسم الشارع:</strong> {{printData?.employee_Street_Name}}</p>
+        <p><strong>رقم المبنى:</strong> {{printData?.employee_BuildingNumber}}</p>
+        <p><strong>المدينة:</strong> {{printData?.employee_City}}</p>
+        <p><strong>رقم الفرع:</strong> {{printData?.branch_ID}}</p>
+        <p><strong>ارقام التليفون:</strong> {{printData?.employeePhones}}</p>
+    </div>
 </div>
